# deckmanager

./: .gitignore  ARCHITECTURE.md  PKGBUILD  PLUGIN_API.md  README.md  deckmanager.install  install.sh  package-lock.json  package.json  uninstall.sh  vite.config.ts
.github/workflows/: release.yml
src/: App.css  App.tsx  types.test.ts  types.ts
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/docs/plugins/: core.md  elgato.md  obs.md
src-tauri/examples/: bindings.toml
src-tauri/scripts/: 70-streamdeck.rules  archdeck.service.template  deckmanager-wrapper.sh  deckmanager.service.template  install-autostart.sh  setup-udev.sh  uninstall-autostart.sh
src-tauri/src/: binding.rs  button_renderer.rs  capability.rs  commands.rs  config.rs  device.rs  elgato_key_light.rs  events.rs  hotplug.rs  image_cache.rs  input_processor.rs  key_light_controller.rs  lib.rs  main.rs  state_manager.rs  streamdeck.rs
src-tauri/src/core/: audio.rs  commands.rs  media.rs  mod.rs
src-tauri/src/hid/: encoder_press.rs  mod.rs
src-tauri/src/plugin/: mod.rs  registry.rs  types.rs
src-tauri/src/plugins/: mod.rs
src-tauri/src/plugins/elgato/: client.rs  controller.rs  mod.rs  plugin.rs
src-tauri/src/plugins/obs/: client.rs  controller.rs  mod.rs  plugin.rs
src/components/: ActivityBar.tsx  BindingEditor.tsx  CapabilityBrowser.test.tsx  CapabilityBrowser.tsx  DeviceLayout.tsx  ErrorBoundary.tsx  IconBrowser.tsx  PluginCard.tsx  PluginsPage.tsx
src/icons/: dashboard-icons.json  lucide-icons.json
src/test/: setup.ts
src/utils/: svg.test.ts  svg.ts
