[package]
name = "tauri-app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "tauri_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[features]
default = ["plugin-elgato"]

# App plugins (optional)
plugin-elgato = []
# plugin-obs = ["tungstenite"]       # OBS Studio integration (future)
# plugin-spotify = ["rspotify"]      # Spotify control (future)
# plugin-homeassistant = []          # Home Assistant (future)

# Premium plugin bundle (future)
# plugin-premium = ["plugin-obs", "plugin-spotify", "plugin-homeassistant"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1.0"
hidapi = "2.6"
elgato-streamdeck = "0.12.1"
toml = "0.8"
dirs = "5"
image = "0.25"
imageproc = "0.24"
ab_glyph = "0.2"
reqwest = { version = "0.12", features = ["blocking", "json"] }
